--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,12 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="teal_200">#FF04A4A4</color>
+    <color name="teal_700">#FF026262</color>
     <color name="black">#FF000000</color>
+    <color name="black_700">#13131A</color>
+    <color name="black_500">#1C1C24</color>
+    <color name="black_200">#262837</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="white700">#F7F7F7</color>
 </resources>
