--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,40 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Theme.KumparanTask" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.KumparanTask" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/teal_200</item>
+        <item name="colorPrimaryVariant">@color/teal_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:colorBackground">@color/white700</item>
+        <item name="colorCardBackground">@color/white</item>
+        <item name="colorTextTitle">@color/black</item>
+        <item name="colorTextBody">@color/black</item>
+    </style>
+    <style name="Widget.AppCompat.Toolbar.TextSize">
+        <item name="android:textSize">@dimen/_20ssp</item>
+    </style>
+    <style name="ShapeAppearance.App.CircleImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
+    <style name="ShapeAppearance.App.RoundedImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">4dp</item>
+    </style>
+    <style name="TextAppearance.MaterialComponents.Body1.Core">
+        <item name="android:textColor">?attr/colorTextTitle</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/_18ssp</item>
+    </style>
+    <style name="TextAppearance.MaterialComponents.Body2.Core">
+        <item name="android:textColor">?attr/colorTextTitle</item>
+        <item name="android:textSize">@dimen/_12ssp</item>
     </style>
 </resources>
